--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nestjs/core": "10.2.7",
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/mapped-types": "2.0.2",
+    "@nestjs/microservices": "10.2.7",
     "@nestjs/mongoose": "10.0.1",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "10.2.7",
@@ -25,6 +26,7 @@
     "fast-xml-parser": "4.3.2",
     "glob": "^10.3.10",
     "helmet": "7.0.0",
+    "kafkajs": "^2.2.4",
     "lodash": "4.17.21",
     "mongoose": "7.6.0",
     "mongoose-lean-id": "0.5.0",
